--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    
+
     "outDir": "./dist",
 
     "strict": true,
@@ -12,5 +12,6 @@
     "forceConsistentCasingInFileNames": true,
 
     "types": ["node", "express"]
-  }
+  },
+  "include": ["**/*.ts", "**/*.d.ts"]
 }
