--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,7 +29,8 @@
     "resend": "^6.6.0",
     "run": "^1.5.0",
     "sequelize": "^6.37.7",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
