--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
