--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.34",
     "@types/react-toastify": "^4.0.2",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
