--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon app.ts",
     "build": "tsc",
-    "start": "ts-node app.ts"
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -31,7 +31,6 @@
     "sequelize": "^6.37.7",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
-    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
@@ -44,6 +43,7 @@
     "@types/node": "^25.0.6",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0"
   }
 }
