--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
