--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,8 +16,10 @@
     "@types/react-toastify": "^4.0.2",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
