--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,4 +1,3 @@
-VITE_BACKEND_URL=https://gigflow-42g0.onrender.com
+# VITE_BACKEND_URL=https://gigflow-42g0.onrender.com
 
-# VITE_BACKEND_URL=http://localhost:4000
-
+VITE_BACKEND_URL=http://localhost:4000
